--- a/project.properties
+++ b/project.properties
@@ -1,6 +1,6 @@
 target=android-17
 
-android.library.reference.3=..\\UniversalImageLoader
+android.library.reference.3=..\\PhotoView\\src\\main
 android.library.reference.1=..\\android-support-v7-appcompat
 android.library.reference.2=..\\PullToRefreshListFragment
-android.library.reference.4=../PhotoView/src/main
+android.library.reference.4=../ImageLoader
