全部合并成功

--- a/project.properties
+++ b/project.properties
@@ -1,8 +1,7 @@
 target=android-18
 
 android.library.reference.1=..\\android-support-v7-appcompat
-android.library.reference.2=..\\PhotoView\\src\\main
-android.library.reference.3=..\\cropper
+android.library.reference.2=..\\PullToRefreshListFragment
+android.library.reference.3=..\\PhotoView\\src\\main
 android.library.reference.4=..\\ImageLoader
-android.library.reference.5=../PullToRefreshListFragment
-‹
+android.library.reference.5=../cropper
