--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -51,9 +51,12 @@
         <activity android:name="scu.android.ui.SearchFriendActivity" />
         <activity android:name="scu.android.ui.ActivityMultiRoom" />
         <activity android:name="scu.android.ui.ChatMainActivity" />
-        <activity android:name="scu.android.ui.LoginActivity" >
+        <activity android:name="scu.android.ui.LoginActivity" />
+         <activity android:name="scu.android.ui.GroupDetailActivity" />
+             
+             <activity android:name="scu.android.ui.NewFriendsActivity" />
       
-            </activity>
+           
             
         <activity android:name="scu.android.ui.RegisterActivity" />
         <activity android:name="scu.android.ui.AccountSettingActivity" />
@@ -69,6 +72,8 @@
         <activity android:name="scu.android.activity.NativePhotosActivity" />
         <activity android:name="scu.android.demo.Demo" />
         <activity android:name="scu.android.activity.ReplysActiviy" />
+        
+         <service android:name="scu.android.service.PresenceService" />
     </application>
 
 </manifest>
